--- a/projects/ecommerce-site/index.html
+++ b/projects/ecommerce-site/index.html
@@ -330,8 +330,44 @@
                     </div>
                 </div>
             </div>
-            <div id="single-footer-content">
+        </div> 
+        <div id="footer">
+            <div id="footer-content-container">
+                <div class="about-footer">
+                    <span id="about">About</span>
+                    <span>Gift Guides</span>
+                    <span>Student Discounts</span>
+                    <span>Log In</span>
+                    <span>Sign Up</span>
+                    <span>Bulk Orders</span>
+                </div>
+
+                <div class="about-footer">
+                    <span id="about">About</span>
+                    <span>Gift Guides</span>
+                    <span>Student Discounts</span>
+                    <span>Log In</span>
+                    <span>Sign Up</span>
+                    <span>Bulk Orders</span>
+                </div>
+                <div class="about-footer">
+                    <span id="about">About</span>
+                    <span>Gift Guides</span>
+                    <span>Student Discounts</span>
+                    <span>Log In</span>
+                    <span>Sign Up</span>
+                    <span>Bulk Orders</span>
+                </div>
+                <div class="about-footer">
+                    <span id="about">About</span>
+                    <span>Gift Guides</span>
+                    <span>Student Discounts</span>
+                    <span>Log In</span>
+                    <span>Sign Up</span>
+                    <span>Bulk Orders</span>
+                </div>
             </div>
         </div>
+        
     </body>
 </html>
