--- a/projects/ecommerce-site/index.html
+++ b/projects/ecommerce-site/index.html
@@ -161,7 +161,7 @@
                 </div>
             </div>
             
-            <h3 class="shop-exclusives">Shop All Halloween Exculsives</h3>
+            <h3 class="shop-exclusives">Shop All Halloween Exclusives</h3>
 
             <div id="content-gallery-container">
                 
